Added buttons, todo items, and linked all pages

--- a/html_pages/completion.html
+++ b/html_pages/completion.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Completion</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <h1 style="text-align:center;">All Done!</h1>
@@ -15,12 +15,17 @@
 
     <p>Your Final Score Is: </p>
 
+    <div class="initials">
+      <label for="first-name">Enter Initials</label>
+      <input type="text" class="form-input" name="initials" placeholder="Enter initials" />
+    </div>
 
-    <div class="initials">Enter Initials</div>
-    <div class="Submit">Submit</div>
+      <button id="submit-btn" class="btn btn-warning">
+        <a class="submit" href="high-score.html">Submit</a>
+      </button>
+    
     
 
-
-<script src= "script.js"></script>
+<script src= "../script.js"></script>
 </body>
 </html>
