--- a/html_pages/high-score.html
+++ b/html_pages/high-score.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>High Scores</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <h1 style="text-align:center;">High Scores</h1>
@@ -17,6 +17,13 @@
     <p>List of high scores</p>
     <p>List of high scores</p>
 
-<script src= "script.js"></script>
+
+
+    <button id="goback-btn" class="btn btn-warning">
+      <a href="../index.html">Go Back</a>
+    </button>
+    
+
+<script src= "../script.js"></script>
 </body>
 </html>
