--- a/html_pages/question-02.html
+++ b/html_pages/question-02.html
@@ -6,22 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Question 2</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <h1 style="text-align:center;">Question 2</h1>
 
 <body>
 
-    <p>This is the question</p>
+    <p>The condition in an if / else statement is enclosed within _____.</p>
+
+    <ol>
+      <button id="correct-btn" class="btn btn-warning">
+        <li class="correct"><a href="question-03.html">Correct answer</a></li>
+      </button><br>
+      <button id="incorrect-btn" class="btn btn-warning">
+        <li class="incorrect"><a href="question-03.html">Incorrect answer</a></li>
+      </button><br>
+      <button id="incorrect-btn" class="btn btn-warning">
+        <li class="incorrect"><a href="question-03.html">Incorrect answer</a></li>
+      </button><br>
+      <button id="incorrect-btn" class="btn btn-warning">
+        <li class="incorrect"><a href="question-03.html">Incorrect answer</a></li>
+      </button>
+      </ol>
 
 
-    <div class="correct">Correct answer</div>
-    <div class="incorrect">Incorrect answer</div>
-    <div class="incorrect">Incorrect answer</div>
-    <div class="incorrect">Incorrect answer</div>
-
-
-<script src= "script.js"></script>
+<script src= "../script.js"></script>
 </body>
 </html>
