--- a/html_pages/question-03.html
+++ b/html_pages/question-03.html
@@ -6,21 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Question 3</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <h1 style="text-align:center;">Question 3</h1>
 
 <body>
 
-    <p>This is the question</p>
+    <p>Arrays in JavaScript can be used to store _____.</p>
 
-
-    <div class="correct">Correct answer</div>
-    <div class="incorrect">Incorrect answer</div>
-    <div class="incorrect">Incorrect answer</div>
-    <div class="incorrect">Incorrect answer</div>
-
+    <ol>
+      <button id="correct-btn" class="btn btn-warning">
+        <li class="correct"><a href="question-04.html">Correct answer</a></li>
+      </button><br>
+      <button id="incorrect-btn" class="btn btn-warning">
+        <li class="incorrect"><a href="question-04.html">Incorrect answer</a></li>
+      </button><br>
+      <button id="incorrect-btn" class="btn btn-warning">
+        <li class="incorrect"><a href="question-04.html">Incorrect answer</a></li>
+      </button><br>
+      <button id="incorrect-btn" class="btn btn-warning">
+        <li class="incorrect"><a href="question-04.html">Incorrect answer</a></li>
+      </button>
+      </ol>
 
 <script src= "script.js"></script>
 </body>
