--- a/index.html
+++ b/index.html
@@ -14,58 +14,22 @@
 
         <!-- todo: this is the html for the timer -->
         <!-- todo: fix header so they are both on same line -->
-        <h4 style="text-align:left;"><a href="./high-score.html">View High Scores</a></h4>
+        <h4 style="text-align:left;"><a href="./html_pages/high-score.html">View High Scores</a></h4>
         <h4 class="time" style="text-align:right;"></h4>
         <div id="main"></div>
     </header>
 
   <h1 style="text-align:center;">Coding Quiz Challenge</h1>
-
-
-  <nav>
-    <a href="./html_pages/question-01.html">Question 1</a>
-    <a href="./html_pages/question-02.html">Question 2</a>
-    <a href="./html_pages/question-03.html">Question 3</a>
-    <a href="./html_pages/question-04.html">Question 4</a>
-    <a href="./html_pages/question-05.html">Question 5</a>
-    <a href="./html_pages/completion.html">Completion</a>
-    <a href="./html_pages/high-score.html">High Scores</a>
-  </nav>
-
   
+<p>Try to answer the following code related questions within the time limit.<br>
+  Keep in mind that incorrect answers will penalize your time by 10 seconds!
+</p>
+
+<button id="start-btn" class="btn btn-warning">
+  <a href="./html_pages/question-01.html">Start Quiz</a>
+</button>
 
 
-<!-- todo: this is the html for the switch -->
-  <div class="container dark">
-    <div class="menu">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
-      </ul>
-    </div>
-    <div class="row toggle">
-      <div class="col">
-        <p>DARK MODE</p>
-      </div>
-      <label class="switch col">
-        <input type="checkbox" id="theme-switcher">
-        <span class="slider round"></span>
-      </label>
-      <div class="col">
-        <p>LIGHT MODE</p>
-      </div>
-    </div>
-    <div class="row">
-      <h2>Adding an Event Listener</h2>
-    </div>
-    <div class="row">
-      <div>
-        <p>We use the .addEventListener() method to set up an element to listen for a specific event</p>
-        <p id= "light-mode">When we switch the slider to "Light Mode", the background is changed to a light color.</p>
-        <p id = "dark-mode">When we switch the slider to "Dark Mode", the background is changed to a dark color.</p>
-      </div>
      
     </div>
 
