Added event target and formatted all pages

--- a/html_pages/completion.html
+++ b/html_pages/completion.html
@@ -16,15 +16,13 @@
     <p>Your Final Score Is: </p>
 
     <div class="initials">
-      <label for="first-name">Enter Initials</label>
+      <label for="inmitials">Enter Initials</label>
       <input type="text" class="form-input" name="initials" placeholder="Enter initials" />
     </div>
 
-      <button id="submit-btn" class="btn btn-warning">
-        <a class="submit" href="high-score.html">Submit</a>
-      </button>
-    
-    
+    <button id="btn" class="btn btn-warning" onclick="window.location.href = 'high-score.html';">
+      <p class="submit">Submit</p>
+    </button>    
 
 <script src= "../script.js"></script>
 </body>
