--- a/html_pages/high-score.html
+++ b/html_pages/high-score.html
@@ -17,12 +17,9 @@
     <p>List of high scores</p>
     <p>List of high scores</p>
 
-
-
-    <button id="goback-btn" class="btn btn-warning">
-      <a href="../index.html">Go Back</a>
+    <button id="btn" class="btn btn-warning" onclick="window.location.href = '../index.html';">
+      <p class="submit">Go Back</p>
     </button>
-    
 
 <script src= "../script.js"></script>
 </body>
