--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!-- todo: this is the html for the timer -->
         <!-- todo: fix header so they are both on same line -->
         <h4 style="text-align:left;"><a href="./html_pages/high-score.html">View High Scores</a></h4>
-        <h4 class="time" style="text-align:right;"></h4>
-        <div id="main"></div>
+        <!-- <h4 class="time" style="text-align:right;"></h4>
+        <div id="main"></div> -->
     </header>
 
   <h1 style="text-align:center;">Coding Quiz Challenge</h1>
@@ -25,8 +25,8 @@
   Keep in mind that incorrect answers will penalize your time by 10 seconds!
 </p>
 
-<button id="start-btn" class="btn btn-warning">
-  <a href="./html_pages/question-01.html">Start Quiz</a>
+<button id="btn-start" class="btn btn-warning" onclick="window.location.href = './html_pages/question-01.html';">
+  <p>Start Quiz</p>
 </button>
 
 
