--- a/html_pages/question-03.html
+++ b/html_pages/question-03.html
@@ -9,27 +9,35 @@
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
+<header>
+<!-- todo: this is the html for the timer -->
+<h4 class="time" style="text-align:right;"></h4>
+<div id="main"></div>
+</header>
+
 <h1 style="text-align:center;">Question 3</h1>
 
 <body>
 
-    <p>Arrays in JavaScript can be used to store _____.</p>
+    <p id="question" class='paragraph'>Arrays in JavaScript can be used to store _____.</p>
 
+    <div id='container' class="container">
     <ol>
-      <button id="correct-btn" class="btn btn-warning">
-        <li class="correct"><a href="question-04.html">Correct answer</a></li>
+      <button id="answer-btn" class="answer-incorrect" onclick="window.location.href = 'question-04.html';">
+        <li class="answer-incorrect">numbers and strings</li>
       </button><br>
-      <button id="incorrect-btn" class="btn btn-warning">
-        <li class="incorrect"><a href="question-04.html">Incorrect answer</a></li>
+      <button id="answer-btn" class="answer-incorrect" onclick="window.location.href = 'question-04.html';">
+        <li class="answer-incorrect">other arrays</li>
       </button><br>
-      <button id="incorrect-btn" class="btn btn-warning">
-        <li class="incorrect"><a href="question-04.html">Incorrect answer</a></li>
+      <button id="answer-btn" class="answer-incorrect" onclick="window.location.href = 'question-04.html';">
+        <li class="answer-incorrect">booleans</li>
       </button><br>
-      <button id="incorrect-btn" class="btn btn-warning">
-        <li class="incorrect"><a href="question-04.html">Incorrect answer</a></li>
+      <button id="answer-btn" class="answer-correct" onclick="window.location.href = 'question-04.html';">
+        <li class="answer-correct">all of the above</li>
       </button>
       </ol>
+    </div>
 
-<script src= "script.js"></script>
+<script src= "../script.js"></script>
 </body>
 </html>
