--- a/high-scores.html
+++ b/high-scores.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>High Score</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
   <body>
     <header>
       <nav>
-        <a href="index.html">Start Over</a>
+        <a href="../index.html">Start Over</a>
       </nav>
     </header>
     <main>
@@ -30,6 +30,6 @@
       </div>
     </main>
 
-    <script src="high-score.js"></script>
+    <script src="./assets/js/high-score.js"></script>
   </body>
 </html>
